changed the model popup to no longer transition the z-index

--- a/src/components/model/model.styles.scss
+++ b/src/components/model/model.styles.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
 
-    transition: all .5s;
+    transition: opacity .5s;
 
     &--hidden {
         z-index: -100;
